# Tyche

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  justfile  nul  package-lock.json  package.json  tsconfig.json
clients/idls/: tyche_auction.json  tyche_core.json  tyche_escrow.json  tyche_voter_weight_plugin.json
clients/sdk/: README.md
crates/tyche-common/: Cargo.toml  README.md
crates/tyche-common/src/: asset_type.rs  constants.rs  lib.rs  phase.rs  seeds.rs
docs/: CEE.md  INTEGRATION.md  SECURITY.md
programs/tyche-auction/: Cargo.toml  README.md
programs/tyche-auction/src/: discriminator.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
programs/tyche-auction/src/args/: activate_auction.rs  cancel_auction.rs  close_bid_record.rs  create_auction.rs  finalize_auction.rs  mod.rs  place_bid.rs
programs/tyche-auction/src/instruction_builder/: activate_auction.rs  cancel_auction.rs  close_bid_record.rs  create_auction.rs  finalize_auction.rs  place_bid.rs
programs/tyche-auction/src/processor/: activate_auction.rs  cancel_auction.rs  close_bid_record.rs  create_auction.rs  finalize_auction.rs  mod.rs  place_bid.rs  process_undelegation.rs
programs/tyche-auction/src/state/: auction.rs  bid_record.rs  mod.rs
programs/tyche-core/: Cargo.toml  README.md
programs/tyche-core/src/: discriminator.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
programs/tyche-core/src/instruction_args/: activate.rs  cancel.rs  close.rs  create_competition.rs  extend.rs  initialize_protocol_config.rs  mod.rs  register_bid.rs  settle.rs  update_crank_authority.rs  update_protocol_config.rs
programs/tyche-core/src/instruction_builder/: activate.rs  cancel.rs  close.rs  create.rs  extend.rs  initialize_protocol_config.rs  mod.rs  register_bid.rs  settle.rs  update_crank_authority.rs  update_protocol_config.rs
programs/tyche-core/src/processor/: activate.rs  cancel.rs  close.rs  create.rs  extend.rs  initialize_protocol_config.rs  mod.rs  register_bid.rs  settle.rs  update_crank_authority.rs  update_protocol_config.rs
programs/tyche-core/src/state/: competition.rs  mod.rs  participant.rs  protocol_config.rs
programs/tyche-escrow/: Cargo.toml  README.md
programs/tyche-escrow/src/: discriminator.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
programs/tyche-escrow/src/args/: deposit.rs  release.rs
programs/tyche-escrow/src/instruction_builder/: deposit.rs  mod.rs  refund.rs  release.rs
programs/tyche-escrow/src/processor/: deposit.rs  mod.rs  refund.rs  release.rs
programs/tyche-escrow/src/state/: vault.rs
programs/tyche-voter-weight-plugin/: Cargo.toml  README.md
programs/tyche-voter-weight-plugin/src/: discriminator.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
programs/tyche-voter-weight-plugin/src/args/: create_registrar.rs  mod.rs  update_voter_weight_record.rs
programs/tyche-voter-weight-plugin/src/processor/: create_registrar.rs  create_voter_weight_record.rs  mod.rs  update_max_voter_weight_record.rs  update_voter_weight_record.rs
programs/tyche-voter-weight-plugin/src/state/: max_voter_weight_record.rs  mod.rs  registrar.rs  voter_weight_record.rs
programs/tyche-voter-weight-plugin/src/utils/: pda.rs
scripts/: codama.ts  fix-idls.ts  generate-idls.sh  patch-discriminators.cjs  restore-pkg-names.cjs  setup-realms.sh  setup-test-env.sh  tyche-cli.sh
tests/: .gitignore  Cargo.toml  README.md
tests/src/: helpers.rs  integration.rs  lib.rs  tyche_auction.rs  tyche_core.rs  tyche_escrow.rs
tests/ts/: .env.test.example  .gitignore  init-protocol-config.test.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/ts/programs/: integration.test.ts  tyche-auction.test.ts  tyche-core.test.ts  tyche-escrow.test.ts  tyche-voter-weight-plugin.test.ts
tests/ts/sdk/: accounts.test.ts  create-auction.test.ts  full-flow.test.ts  pdas.test.ts  place-bid.test.ts
tests/ts/setup/: airdrop.ts  client.ts  env.ts  global-setup.ts  helpers.ts
tests/ts/simulation/: auction-governance-demo.test.ts
