[package]
name    = "tyche-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tyche-common  = { workspace = true }
tyche-core    = { workspace = true }
tyche-escrow  = { workspace = true }
tyche-auction = { workspace = true }
solana-sdk    = { workspace = true }
bytemuck      = { workspace = true }
tokio         = { workspace = true }

[lints]
workspace = true
