[package]
name        = "tyche-auction"
version     = "0.1.0"
description = "Tyche protocol auction vertical. Sealed-bid English auction on top of the CEE lifecycle."
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "tyche_auction"

[features]
# Disables the program entrypoint so this crate can be linked as a library.
# Required when used as a dependency in the test suite.
no-entrypoint = []
default       = []

[dependencies]
tyche-common                = { workspace = true }
tyche-core                  = { workspace = true, features = ["no-entrypoint"] }
tyche-escrow                = { workspace = true, features = ["no-entrypoint"] }
pinocchio                   = { workspace = true }
pinocchio-system            = { workspace = true }
bytemuck                    = { workspace = true }
num_enum                    = { workspace = true }
shank                       = { workspace = true }
ephemeral-rollups-pinocchio = { workspace = true }

# Off-chain only — instruction builders use solana_sdk types.
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk              = { workspace = true }
solana-system-interface = { workspace = true }

[lints]
workspace = true
