[package]
name        = "tyche-escrow"
version     = "0.1.0"
description = "Tyche protocol SOL custody(SPL later). Per-bidder EscrowVault PDAs, fund release, and refund logic."
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "tyche_escrow"

[features]
# Disables the program entrypoint so this crate can be linked as a library.
# Required when used as a dependency in tyche-cpi or the test suite.
no-entrypoint = []
default       = []

[dependencies]
tyche-common     = { workspace = true }
tyche-core       = { workspace = true }
pinocchio        = { workspace = true }
pinocchio-system = { workspace = true }
bytemuck         = { workspace = true }
shank            = { workspace = true }

# Off-chain only — instruction builders and SDK helpers.
# Not pulled in when compiling for the SBF target.
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk              = { workspace = true }
solana-system-interface = { workspace = true }

[lints]
workspace = true
